# epub_typogrify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: TechnicalDesign.md  TypographyConversions.md
src/epub_typogrify/: __init__.py  chars.py  cli.py  processor.py
src/epub_typogrify/lang/: __init__.py  resolver.py  walker.py
src/epub_typogrify/locales/: __init__.py  profile.py  registry.py
src/epub_typogrify/locales/data/: de.toml  default.toml  en-GB.toml  en-US.toml  en.toml  fr.toml  la.toml
src/epub_typogrify/locales/hooks/: __init__.py  en.py  fr.py
src/epub_typogrify/rules/: __init__.py  context.py  dashes.py  ellipsis.py  fractions.py  pipeline.py  punctuation.py  quotes.py  spacing.py
src/epub_typogrify/source/: __init__.py  project.py  xhtml.py
tests/: conftest.py  epubs.py  profiles.py  test_cli.py  test_dashes.py  test_data.py  test_ellipsis.py  test_ellipsis_spacing.py  test_fractions.py  test_hooks.py  test_idempotency.py  test_interrupted_dialogue.py  test_locale_pipeline.py  test_normalize_dashes.py  test_normalize_quote_punctuation.py  test_normalize_quotes.py  test_pipeline.py  test_processor.py  test_profile.py  test_project.py  test_punctuation.py  test_quotes.py  test_registry.py  test_resolver.py  test_smoke.py  test_spacing.py  test_spacing_nbsp.py  test_xhtml.py
